--- a/Primer_Proyecto/src/app/home/home.page.html
+++ b/Primer_Proyecto/src/app/home/home.page.html
@@ -6,7 +6,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Inicio secion</ion-card-title>
+      <ion-card-title>Inicio sesión</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="formularioHome">
