--- a/Primer_Proyecto/src/app/estudiantes/estudiantes.page.html
+++ b/Primer_Proyecto/src/app/estudiantes/estudiantes.page.html
@@ -14,7 +14,7 @@
         <ion-list>
           <ion-item *ngFor="let character of listado">
             <ion-avatar slot="start">
-              <ion-icon name="person-outline"></ion-icon>
+              <ion-img src="https://i.pinimg.com/736x/e5/25/33/e52533822a28b4ca84ac08d6e049917c.jpg"></ion-img>
             </ion-avatar>
             <ion-label>{{character.Nombres}}</ion-label>
 
