--- a/Primer_Proyecto/src/app/camara/camara.page.html
+++ b/Primer_Proyecto/src/app/camara/camara.page.html
@@ -7,86 +7,26 @@
   </ion-toolbar>
   </ion-header>
 <ion-content>
-    <ion-accordion-group>
-      <ion-accordion value="first">
-        <ion-item slot="header" color="light">
-          <ion-label>Programacion de aplicaciones moviles</ion-label>
-        </ion-item>
-        <div  class="ion-padding" slot="content">
-          <ion-button  expand="full" (click)="starscan()" color="dark">
-            Escanear
-           </ion-button>
-           <ion-button  expand="full" (click)="create()" color="dark">
-            Generar Qr
-           </ion-button>
-        </div>
-      </ion-accordion>
-      <ion-accordion value="second">
-        <ion-item slot="header" color="light">
-          <ion-label>Arquitectura</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">
-          <ion-button  expand="full" (click)="starscan()" color="dark">
-            Escanear
-           </ion-button>
-           <ion-button  expand="full" (click)="create()" color="dark">
-            Generar Qr
-           </ion-button>
-        </div>
-      </ion-accordion>
-      <ion-accordion value="third">
-        <ion-item slot="header" color="light">
-          <ion-label>Calidad de software</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">
-          <ion-button  expand="full" (click)="starscan()" color="dark">
-            Escanear
-           </ion-button>
-           <ion-button  expand="full" (click)="create()" color="dark">
-            Generar Qr
-           </ion-button>
-        </div>
-      </ion-accordion>
-      <ion-accordion value="fourth">
-        <ion-item slot="header" color="light">
-          <ion-label>Programacion de software de escritorio</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">
-          <ion-button  expand="full" (click)="starscan()" color="dark">
-            Escanear
-           </ion-button>
-           <ion-button  expand="full" (click)="create()" color="dark">
-            Generar Qr
-           </ion-button>
-        </div>
-      </ion-accordion>
-      <ion-accordion value="fifth">
-        <ion-item slot="header" color="light">
-          <ion-label>Programacion de algoritmos</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">
-          <ion-button  expand="full" (click)="starscan()" color="dark">
-            Escanear
-           </ion-button>
-           <ion-button  expand="full" (click)="create()" color="dark">
-            Generar Qr
-           </ion-button>
-        </div>
-      </ion-accordion>
-      <ion-accordion value="sixth">
-        <ion-item slot="header" color="light">
-          <ion-label>Programacion web</ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">
-          <ion-button  expand="full" (click)="starscan()"  color="dark">
-            Escanear
-           </ion-button>
-           <ion-button  expand="full" (click)="create()" color="dark">
-            Generar Qr
-           </ion-button>
-        </div>
-      </ion-accordion> 
-    </ion-accordion-group>  
+  <br><br> <br>
+  <ion-card id="asistencia">
+    <ion-card-header>
+      <ion-card-title>Registrar Asistencia</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+    <ion-item>
+      <ion-label position="floating">Codigo de seccion</ion-label>
+    <ion-input placeholder="Ingrese la seccion de su materia"></ion-input>
+    </ion-item>
+    <ion-button shape="round" expand="full"  color="dark">
+    Registrar asistencia
+     </ion-button>
+  <ion-button shape="round" expand="full" (click)="starscan()" color="dark">
+    Escanear
+   </ion-button>
+    </ion-card-content>
+  </ion-card>
+  
+    
     
   <video #video [hidden]="!scanActive" width="100%"></video>
   <canvas #canvas hidden></canvas>
@@ -94,15 +34,6 @@
     <ion-icon slot="start" name="close"></ion-icon>
     Parar Camara
    </ion-button>    
- <ion-card *ngIf="createCode">
-   <qrcode [qrdata]="createCode"></qrcode>
-    <ion-card-content>
-    Your QR Code : {{createCode}}
-    </ion-card-content>
-    <ion-button  expand="full" (click)="clear()" color="dark">
-     limpiar Qr
-    </ion-button>
- </ion-card>
 <ion-card *ngIf="scanResult">
     <ion-card-header>
       <ion-card-title>Codigo QR</ion-card-title>
