--- a/Primer_Proyecto/src/app/inicio/inicio.page.scss
+++ b/Primer_Proyecto/src/app/inicio/inicio.page.scss
@@ -9,6 +9,14 @@ ion-img{
     max-width: 30vh;
     padding-bottom: 10px;
   }
+  ion-card{
+    text-align: center;
   
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 40%;
+    transform: translateY(-55%);
+  }
 
   
